# proyecto-redes

./: .gitignore  README.md  gen_tls_certs.sh  requirements.txt  ruff.toml  setup_venv.sh
client/: CMakeLists.txt  Makefile  fake.cpp
client/src/: SensorData.cpp  SensorData.hpp  main.cpp
docs/report/: report.md
final_server/: main.py
final_server/app/: api.py  database.py  main.py  models.py
final_server/app/static/: dashboard.js
final_server/app/templates/: dashboard.html
final_server/templates/: index.html
mid_server/: data_handler.py  main.py  tls_server.py
query_client/: main.py
